packages/edxml-test-corpus/edxml_test_corpus-3.0.1-py3-none-any.whl/edxml_test_corpus/tests/3/3.0/3.0.0/invalid/ontology/event-type-parent-unknown.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~                                                                           ~
  ~                     Copyright (c) 2020 the EDXML Foundation               ~
  ~                                                                           ~
  ~                                  http://edxml.org                         ~
  ~                                                                           ~
  ~                    This file is part of the EDXML Test Corpus             ~
  ~                      and is released under the MIT License:               ~
  ~                        https://opensource.org/licenses/MIT                ~
  ~                                                                           ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--
Testing ontology component validation, verify
if parent definitions that refer to an undefined
event type are rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <object-types>
      <object-type name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="number:int"/>
    </object-types>
    <concepts/>
    <event-types>
      <event-type name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[c]]" story="[[c]][[d]]" version="1">
        <parent event-type="unknown" property-map="c:a" parent-description="a" siblings-description="a"/>
        <properties>
          <property name="c" object-type="a" description="c" optional="true" multivalued="false" confidence="10"/>
          <property name="d" object-type="a" description="d" optional="true" multivalued="false" confidence="10"/>
        </properties>
        <relations/>
      </event-type>
    </event-types>
    <sources/>
  </ontology>
</edxml>
